Fix home z-index

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -14,6 +14,7 @@
         left: 0;
         position: absolute;
         width: 100%;
+        z-index: -2;
     }
     .titlePosition {
         font-size: 4.3rem;
